[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/texteditor/notepad.gd" type="Script" id=1]

[node name="PanelContainer" type="PanelContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
_sections_unfolded = [ "Size Flags" ]

[node name="VBoxContainer" type="VBoxContainer" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1010.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="NewButton" type="ToolButton" parent="VBoxContainer/TopBar"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New"
flat = true

[node name="SaveButton" type="ToolButton" parent="VBoxContainer/TopBar"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_right = 85.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save"
flat = true

[node name="LoadButton" type="ToolButton" parent="VBoxContainer/TopBar"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 89.0
margin_right = 131.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 1010.0
margin_bottom = 586.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags", "Theme", "custom_constants" ]

[node name="ItemList" type="ItemList" parent="VBoxContainer/HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 125.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [  ]
select_mode = 0
icon_mode = 1
_sections_unfolded = [ "Size Flags" ]

[node name="MainContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 129.0
margin_right = 1010.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 7.0
alignment = 0
_sections_unfolded = [ "Size Flags", "Theme" ]

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/MainContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 881.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
editable = false
focus_mode = 2
placeholder_text = "Insert Title"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
context_menu_enabled = true
_sections_unfolded = [ "Placeholder" ]

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/MainContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 881.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
text = ""
readonly = true
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
_sections_unfolded = [ "Size Flags", "custom_colors", "custom_constants" ]

[connection signal="pressed" from="VBoxContainer/TopBar/NewButton" to="." method="create_new"]

[connection signal="pressed" from="VBoxContainer/TopBar/SaveButton" to="." method="save_data"]

[connection signal="pressed" from="VBoxContainer/TopBar/LoadButton" to="." method="load_data"]

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/ItemList" to="." method="select_item"]

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/MainContainer/LineEdit" to="." method="save_title"]

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/MainContainer/TextEdit" to="." method="save_changes"]


